<resources>
    <string name="app_name">FoodTrck</string>
    <string name="title_FoodTruckNav">Cities</string>
    <string name="title_MapNav">Near Me</string>
    <string name="title_RegionsList">Available Regions</string>
    <string name="info_tab">Info</string>
    <string name="schedule_tab">Schedule</string>
    <string name="text_contact">Contact</string>
    <string name="text_schedule">Schedule</string>
    <string name="text_description">Description</string>
    <string name="chip_distance">Distance</string>
    <string name="chip_rating">Rating</string>
    <string name="chip_name">Name</string>
</resources>